5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1800_2572.log
== TEST (2019-06-12 11:45:07) 
-- CODE:
from numpy import*

vet = array(eval(input("digite: ")))

x = zeros(2 , dtype=int)
aux = 0

for i in range(size(vet)):
	if v[i] % 2 == 0:
		aux = aux + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:45:42) 
-- CODE:
from numpy import*

vet = array(eval(input("digite: ")))

x = zeros(2 , dtype=int)
aux = 0

for i in range(size(vet)):
	if vet[i] % 2 == 0:
		aux = aux + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:49:43) 
-- CODE:
from numpy import*

vet = array(eval(input("digite: ")))

x = zeros(2 , dtype=int)
aux = 0

for i in range(size(vet)):
	if i % 2 == 0:
		aux = aux + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:49:57) 
-- CODE:
from numpy import*

vet = array(eval(input("digite: ")))

x = zeros(2 , dtype=int)
aux = 0

for i in range(size(vet)):
	if i % 2 == 0:
		aux = aux + 1
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:50:25) 
-- CODE:
from numpy import*

vet = array(eval(input("digite: ")))

x = zeros(2 , dtype=int)
aux = 0

for i in range(size(vet)):
	if i % 2 == 0:
		aux = aux + 1
print(vet(i))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:53:29) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

x = zeros(2 , dtype=int)


for i in range(size(v)):
	if i % 2 != 0:
		x[0]= v[i]
		x[1] = v[i]
print(x)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:54:23) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

x = zeros(2 , dtype=int)


for i in range(size(v)):
	if v[i] % 2 != 0:
		x[0]= v[i]
		x[1] = v[i]
print(x)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:55:16) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

x = zeros(2 , dtype=int)


for i in range(size(v)):
	if v[i] % 2 != 0:
		x[0]= v[i]
	elif v[i] % 2 != 0:
		x[1]= v[i]
print(x)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:56:08) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

x = zeros(2 , dtype=int)


for i in range(size(v)):
	if v[i] % 2 != 0:
		x[0]= v[i]
	
for i in range(size(v)):
	if v[i] % 2 != 0:
		x[1]= v[i]
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:56:17) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

x = zeros(2 , dtype=int)


for i in range(size(v)):
	if v[i] % 2 != 0:
		x[0]= v[i]
	
for i in range(size(v)):
	if v[i] % 2 != 0:
		x[1]= v[i]
		
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:56:39) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

x = zeros(2 , dtype=int)


for i in range(size(v)):
	if v[i] % 2 != 0:
		x[0]= v[i]
	
	for i in range(size(v)):
		if v[i] % 2 != 0:
			x[1]= v[i]
		
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:57:45) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

x = zeros(2 , dtype=int)

for i in range(size(v)):
	if v[i] % 2 != 0:
		x[0]= v[i]
	
for i in range(size(v)):
	if v[i] % 2 != 0:
		x[1]= v[i]
		
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:57:52) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

x = zeros(2 , dtype=int)

for i in range(size(v)):
	if v[i] % 2 != 0:
		x[0]= v[i]
	
for i in range(size(v)):
	if v[i] % 2 != 0:
		x[1]= v[i]
		
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:58:06) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

x = zeros(2 , dtype=int)

for i in range(size(v)):
	if v[i] % 2 != 0:
		x[0]= v[i]
	
for i in range(size(v)):
	if v[i] % 2 != 0:
		x[1]= v[i]
		
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 11:58:23) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

x = zeros(2 , dtype=int)

for i in range(size(v)):
	if v[i] % 2 != 0:
		x[0]= v[i]
	
for i in range(size(v)):
	if v[i] % 2 != 0:
		x[1]= v[i]
		
print(x)

-- EXECUTION TIME:
1.08768
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[97135671 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[85794217 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903 31874903]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:58:52) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

x = zeros(2 , dtype=int)

for i in range(size(v)):
	if v[i] % 2 != 0:
		x[0]= v[i]
	
for i in range(size(v)):
	if v[i] % 2 != 0:
		x[1]= v[i]
		
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:59:47) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

x = zeros(2 , dtype=int)
aux = 0

for i in range(size(v)):
	if v[i] % 2 != 0:
		aux = aux + 1
		
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:00:01) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

x = zeros(2 , dtype=int)
aux = 0

for i in range(size(v)):
	if v[i] % 2 != 0:
		aux = aux + 1
		
   print(x)

-- ERROR:
File "XXXX", line 12
    print(x)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:00:13) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

x = zeros(2 , dtype=int)
aux = 0

for i in range(size(v)):
	if v[i] % 2 != 0:
		aux = aux + 1
		print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:00:25) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

x = zeros(2 , dtype=int)
aux = 0

for i in range(size(v)):
	if v[i] % 2 != 0:
		aux = aux + 1
print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:09:39) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

x = zeros(2 , dtype=int)
aux = 0

for i in range(size(v)):
	if v[i] % 2 != 0:
		aux = aux + 1
print(size(v)-aux)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:09:49) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

x = zeros(2 , dtype=int)
aux = 0

for i in range(size(v)):
	if v[i] % 2 == 0:
		aux = aux + 1
print(size(v)-aux)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:01:28) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

aux = 0

for i in range(size(v)):
	if v[i] % 2 != 0:
		aux = aux + 1

p = zeros(aux, dtype=int)

x = 0
g = 0 

for r in range(size(a)):
	if (r%2 != 0):
		p[x] = v[g]
		x = x+1
	g = g+1
print(p)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:01:45) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

aux = 0

for i in range(size(v)):
	if v[i] % 2 != 0:
		aux = aux + 1

p = zeros(aux, dtype=int)

x = 0
g = 0 

for r in range(size(v)):
	if (r%2 != 0):
		p[x] = v[g]
		x = x+1
	g = g+1
print(p)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:03:08) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

aux = 0

for i in range(size(v)):
	if v[i] % 2 != 0:
		aux = aux + 1

p = zeros(aux, dtype=int)

x = 0
g = 0 

for r in v:
	if (r%2 != 0):
		p[x] = v[g]
		x = x+1
	g = g+1
print(p)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:03:27) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

aux = 0

for i in range(size(v)):
	if v[i] % 2 != 0:
		aux = aux + 1

p = zeros(aux, dtype=int)

x = 0
g = 0 

for r in v:
	if (r%2 != 0):
		p[x] = v[g]
		x = x+1
	g = g+1
print(p)
	
-- EXECUTION TIME:
1.02952
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
